# MyRustCompiler

./: .gitignore  Cargo.toml  README.md  canonical_collection.txt  parse_table.txt  tauri.conf.json
.zed/: debug.json  tasks.json
docs/compiler_design_report/: main.aux  main.bcf  main.out  main.tex  main.toc  references.bib
example_source/: error1.txt  error_bad_function_param.txt  error_missing_else.txt  error_missing_semicolon.txt  error_unclosed_block.txt  error_unclosed_paren.txt  error_unexpected_operator.txt  error_unknown_char.txt  error_unterminated_block_comment.txt  source1.txt  struct_patterns.txt  test1.txt  test2.txt
example_source/hanoi/: hanoi.txt
example_source/type/: README.md  err_array_element_mismatch.txt  err_array_field_out_of_bounds.txt  err_array_length_mismatch.txt  err_break_outside_loop.txt  err_cannot_borrow_mut.txt  err_cannot_deref.txt  err_continue_outside_loop.txt  err_empty_array_cannot_infer.txt  err_field_out_of_bounds.txt  err_if_branch_mismatch.txt  err_invalid_index_base.txt  err_mismatched_let_annotation.txt  err_not_assignable.txt  err_return_type_mismatch.txt  err_wrong_arg_count.txt  ok_arrays_tuples_fields.txt  ok_basic_inference.txt  ok_control_flow_unit.txt  ok_function_calls.txt  ok_if_loop_break_value.txt  ok_if_statement_without_else.txt  (+1 more)
gui/: index.html  package-lock.json  package.json  vite.config.ts
scripts/: test_c_interface.sh  test_output_executable.sh  test_printf.sh
src/: ast.rs  borrowck.rs  compiler.rs  gui_main.rs  hir.rs  lexer.rs  main.rs  my_grammar.rs  parser.rs  thir.rs  typecheck.rs
(+80 files in other folders)
